# tarpc

./: Cargo.toml
bincode-transport/: Cargo.toml
bincode-transport/src/: lib.rs
bincode-transport/tests/: cancel.rs  pushback.rs
compat/: Cargo.toml
compat/src/: lib.rs
example-service/: Cargo.toml  json_client.sh
example-service/src/: client.rs  lib.rs  server.rs
json-transport/: Cargo.toml
json-transport/src/: lib.rs
json-transport/tests/: cancel.rs  pushback.rs
rpc/: Cargo.toml
rpc/src/: context.rs  lib.rs
rpc/src/client/: channel.rs
rpc/src/server/: mod.rs
rpc/src/util/: serde.rs
tarpc/: Cargo.toml
tarpc/examples/: service_registry.rs
