cargo-features = ["rename-dependency"]

[package]
name = "tarpc-example-service"
version = "0.2.0"
authors = ["Tim Kuehn <tikue@google.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/tarpc-example-service"
homepage = "https://github.com/google/tarpc"
repository = "https://github.com/google/tarpc"
keywords = ["rpc", "network", "server", "microservices", "example"]
categories = ["asynchronous", "network-programming"]
readme = "../README.md"
description = "An example server built on tarpc."

[dependencies]
bincode-transport = { package = "tarpc-bincode-transport", version = "0.3", path = "../bincode-transport" }
clap = "2.0"
futures-preview = { version = "0.3.0-alpha.9", features = ["compat", "tokio-compat"] }
serde = { version = "1.0" }
tarpc-compat = { path = "../compat" }
tarpc = { version = "0.14", path = "../tarpc", features = ["serde1"] }
tokio-io = "0.1"
tokio-tcp = "0.1"
log = "0.4"
env_logger = "0.5"
tokio = "0.1"
tokio-executor = "0.1"
serde_json = "1.0"
futures_legacy = { version = "0.1", package = "futures" }

[lib]
name = "service"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
