[package]
name = "tarpc-json-transport"
version = "0.1.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
edition = '2018'
license = "MIT"
documentation = "https://docs.rs/tarpc-json-transport"
homepage = "https://github.com/google/tarpc"
repository = "https://github.com/google/tarpc"
keywords = ["rpc", "network", "json", "serde", "tarpc"]
categories = ["asynchronous", "network-programming"]
readme = "../README.md"
description = "A JSON-based transport for tarpc services."

[dependencies]
futures-preview = "0.3.0-alpha.18"
pin-project = "0.4.2"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "0.2.0-alpha.4", default-features = false, features = ["codec", "io", "net"] }
tokio-net = "0.2.0-alpha.4"
tokio-serde-json = { git = "https://github.com/vorot93/tokio-serde-json" }

[dev-dependencies]
pin-utils = "0.1.0-alpha.4"
assert_matches = "1.0"
